# name: test_query_all_cases[completed-0]
  <class 'dict'> {
    'allCases': <class 'dict'> {
      'edges': <class 'list'> [
      ],
      'totalCount': 0,
    },
  }
---
# name: test_save_case[saveCase-False-None-100]
  <class 'dict'> {
    'saveCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[saveCase-False-None-None]
  <class 'dict'> {
    'saveCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[saveCase-False-["group-name"]|groups-100]
  <class 'dict'> {
    'saveCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                  'group-name',
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[saveCase-False-["group-name"]|groups-None]
  <class 'dict'> {
    'saveCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                  'group-name',
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[saveCase-True-None-100]
  <class 'dict'> {
    'saveCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': <class 'dict'> {
          'status': 'READY',
        },
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[saveCase-True-None-None]
  <class 'dict'> {
    'saveCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': <class 'dict'> {
          'status': 'READY',
        },
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[saveCase-True-["group-name"]|groups-100]
  <class 'dict'> {
    'saveCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': <class 'dict'> {
          'status': 'READY',
        },
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[saveCase-True-["group-name"]|groups-None]
  <class 'dict'> {
    'saveCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': <class 'dict'> {
          'status': 'READY',
        },
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[startCase-False-None-100]
  <class 'dict'> {
    'startCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[startCase-False-None-None]
  <class 'dict'> {
    'startCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[startCase-False-["group-name"]|groups-100]
  <class 'dict'> {
    'startCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                  'group-name',
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
# name: test_save_case[startCase-False-["group-name"]|groups-None]
  <class 'dict'> {
    'startCase': <class 'dict'> {
      'case': <class 'dict'> {
        'document': <class 'dict'> {
          'form': <class 'dict'> {
            'slug': 'suggest-adult-allow',
          },
        },
        'parentWorkItem': None,
        'status': 'RUNNING',
        'workItems': <class 'dict'> {
          'edges': <class 'list'> [
            <class 'dict'> {
              'node': <class 'dict'> {
                'addressedGroups': <class 'list'> [
                  'group-name',
                ],
                'document': <class 'dict'> {
                  'form': <class 'dict'> {
                    'slug': 'suggest-adult-allow',
                  },
                },
                'status': 'READY',
              },
            },
          ],
        },
      },
      'clientMutationId': None,
    },
  }
---
